--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <base href="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="bla.css">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <!--link rel="icon" type="image/x-icon" href="favicon.ico"-->
 </head>
 <body>
     <h1 data-text="... soon ....">... soon ....<div class=""></div></h1>
